refactor: Update project metadata and SEO tags
- Renamed project to reflect SEO services.
- Updated meta descriptions and keywords to emphasize SEO and high-performance websites.
- Modified the favicon to a code icon.
- Adjusted the base path in vite.config.ts.
- Updated `lucide-react` dependency to version 0.475.0.
- Minor adjustments to Hero component animations and gradients.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edgar-roca-|-diseño-web-valencia-&-creative-developer",
+  "name": "edgar-roca-|-diseño-web-valencia-&-seo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0"
+    "lucide-react": "0.475.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
